--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -52,6 +52,11 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot</artifactId>
+			<version>2.6.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
